--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
   
               <div class="resume-item">
                 <h4>Hexa Classification of Erythemato Squamous Disease using Deep Dual Features based Neural Network</h4>
-                <p>Abstract:Deep learning-based Hexa-ESD framework for classifying six types of erythemato-squamous diseases (ESD) using dermoscopic images. The methodology involves denoising using an advanced filter, feature extraction via hybrid Deep learning Network, feature selection using the bio-inspired Optimization algorithm, and classification with a Deep Belief Network (DBN). Our research highlights the effectiveness of advanced deep learning and optimization techniques in dermatological diagnosis.</p>
+                <p>Abstract:Deep learning-based Hexa-ESD framework for classifying six types of erythemato-squamous diseases (ESD) using clinical skin images. The methodology involves denoising using an advanced filter, feature extraction via hybrid Deep learning Network, feature selection using the bio-inspired Optimization algorithm, and classification with a Deep Belief Network (DBN). Our research highlights the effectiveness of advanced deep learning and optimization techniques in dermatological diagnosis.</p>
               </div><!-- Edn Resume Item -->
   
             </div>
@@ -276,7 +276,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>PHD Work</h2>
-        <p><strong>Self prepared ESD_348</strong> dataset consists of dermoscopic images gathered from various sources, including Kaggle and the UCI repository. The images are labeled based on the structured categorization of the UCI repository.</p>
+        <p><strong>Self prepared ESD_348</strong> dataset consists of clinical skin images gathered from various sources, including Kaggle and the UCI repository. The images are labeled based on the structured categorization of the UCI repository.</p>
         <a href="./dataset/ESD_DATASET_348.rar" download>Download Self prepared ESD_348</a>
       </div><!-- End Section Title -->
 
@@ -306,7 +306,7 @@
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-12 col-md-6 portfolio-item isotope-item filter-product">
-              <p>The dataset includes 366 observations with 12 clinical features and 6 classes of skin diseases: psoriasis, seborrheic dermatitis, lichen planus, pityriasis rubra pilaris, chronic dermatitis, and rosea. Our self-prepared dataset depends on the Kaggle dataset, we have gathered the dermoscopic images from this dataset and labeled them based on the UCI repository. All the six classes are represented owing to the 155 images provided by UCI and the 193 images contributed by Kaggle. The distribution reflects class-specific totals while keeping data sources balanced. The target variables were six classes and the number of instances in each class includes psoriasis (111 cases), seborrheic dermatitis (52 cases), lichen planus (71 cases), pityriasis rubra pilaris (20), chronic dermatitis (46), and rosea (48) respectively.</p>
+              <p>The dataset includes 366 observations with 12 clinical features and 6 classes of skin diseases: psoriasis, seborrheic dermatitis, lichen planus, pityriasis rubra pilaris, chronic dermatitis, and rosea. Our self-prepared dataset depends on the Kaggle dataset, we have gathered the clinical skin images from this dataset and labeled them based on the UCI repository. All the six classes are represented owing to the 155 images provided by UCI and the 193 images contributed by Kaggle. The distribution reflects class-specific totals while keeping data sources balanced. The target variables were six classes and the number of instances in each class includes psoriasis (111 cases), seborrheic dermatitis (52 cases), lichen planus (71 cases), pityriasis rubra pilaris (20), chronic dermatitis (46), and rosea (48) respectively.</p>
             </div><!-- End Portfolio Item -->
 
             <div class="col-lg-12 col-md-6 portfolio-item isotope-item filter-branding">
